--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="dog-adoption-form">
+		<form>
+			<label for="name">Name</label>
+			<input type="text" id="name" placeholder="Name"><br>
+			<label for="phone">Phone Number</label>
+			<input type="text" id="phone" placeholder="Phone Number"><br>
+			<label for="address">Address</label>
+			<input type="text" id="address" placeholder="Address"><br>
+			<label for="checkbox">Have you ever lived with a Dog before?</label>
+			<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?"><br>
+			<label for="multiSelect">Please selet your preferred breeds</label>
+			<select id="multiSelect">
+				<option value="lab">Lab</option>
+				<option value="bulldog">Bulldog</option>
+				<option value="Beagle">Beagle</option>
+			</select>
+			<br>
+			<button type="submit" id="submit">Submit</button>
+			
+		</form>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
