--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="dog-adoption-form">
-		<form>
+		<form method="post">
 			<label for="name">Name</label>
 			<input type="text" id="name" placeholder="Name"><br>
 			<label for="phone">Phone Number</label>
@@ -25,7 +25,7 @@
 				<option value="Beagle">Beagle</option>
 			</select>
 			<br>
-			<button type="submit" id="submit">Submit</button>
+			<input type="submit" id="submit">
 			
 		</form>
 	</div>
