--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 				<option value="Beagle">Beagle</option>
 			</select>
 			<br>
-			<input type="submit" id="submit">
+			<input type="submit" id="submit" value="Submit">
 			
 		</form>
 	</div>
